--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="battles.html">legendary battles</a>
                 </li>
                 <li>
-                    <a class="active" href="index.html">Home</a>
+                    <a href="personal.html">Personal</a>
                 </li>
                 
 
@@ -56,7 +56,10 @@
             </div>
         </div>
     </section>
+<footer>
 
+    sources / contact ??
+</footer>
 
   
 </body>
