--- a/personal.html
+++ b/personal.html
@@ -15,10 +15,10 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a class="active" href="political.html">Political Career</a>
+                    <a  href="political.html">Political Career</a>
                 </li>
                 <li>
-                    <a href="battles.html">legendary battles</a>
+                    <a class="active" href="battles.html">legendary battles</a>
                 </li>
                 <li>
                     <a  href="index.html">Home</a>
@@ -27,30 +27,6 @@
                 
 
             </ul>
-<section>
-
-    <div class="timeline">
-  <div class="container left">
-    <div class="content">
-      <h2>2017</h2>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2>2016</h2>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-  <div class="container left">
-    <div class="content">
-      <h2>2017</h2>
-      <p>Lorem ipsum..</p>
-    </div>
-</div>
-
-</section>
-
         </nav>
     </header> 
 </body>
