--- a/political.html
+++ b/political.html
@@ -14,40 +14,61 @@
         </a>
         <nav>
             <ul id="menu">
-                <li>
-                    <a class="active" href="political.html">Political Career</a>
-                </li>
-                <li>
-                    <a href="battles.html">legendary battles</a>
-                </li>
-                <li>
-                    <a  href="index.html">Home</a>
-                </li>
+            <li>
+                <a href="personal.html">Personal</a>
+            </li>
+
+            <li>
+                <a href="battles.html">legendary battles</a>
+            </li>
+            
+            <li>
+                <a  href="political.html">Political Career</a>
+            </li>
 
                 
 
             </ul>
+        </header>
 <section>
 
-    <div class="timeline">
+<div class="timeline">
   <div class="container left">
     <div class="content">
-      <h2>2017</h2>
-      <p>Lorem ipsum..</p>
+      <h2>69 BC-65 BC</h2>
+      <p>Quaestor is the lowest-ranking regular magistrate in ancient Rome, whose traditional responsibility was the treasury.</p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2>2016</h2>
-      <p>Lorem ipsum..</p>
+      <h2>65 BC - 63 BC</h2>
+      <p>aedile is the magistrate responsible for the care and supervision of the markets, also issued edicts.</p>
     </div>
   </div>
   <div class="container left">
     <div class="content">
-      <h2>2017</h2>
-      <p>Lorem ipsum..</p>
+      <h2>62 BC</h2>
+      <p>praetor is a judicial officer who had broad authority in cases of equity, was responsible for the production of the public games, and, in the absence of consuls, exercised extensive authority in the government.</p>
     </div>
 </div>
+<div class="container right">
+  <div class="content">
+    <h2>59 BC</h2>
+    <p>Consul in ancient Rome, either of the two highest of the ordinary magistracies in the ancient Roman Republic. </p>
+  </div>
+</div>
+<div class="container left">
+  <div class="content">
+    <h2>46 BC - 44 BC</h2>
+    <p>Dictator which in the Roman Republic designated a temporary magistrate who was granted extraordinary powers in order to deal with state crises.</p>
+  </div>
+</div>
+<div class="container right">
+  <div class="content">
+    <h2>44 BC - 15 march</h2>
+    <p>he was assassinated by a group of nobles in the Senate House on the Ides of March.</p>
+  </div>
+  </div>
 
 </section>
 
