--- a/battles.html
+++ b/battles.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
+    <link rel="stylesheet" href="assets/css/stylesheetbattle.css">
     <title>Legendary Battles</title>
 </head>
 <body>
@@ -31,5 +32,63 @@
             </ul>
         </nav>
     </header> 
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+        <h2>Legendary battles<i class="#"></i></h2>
+        </div>
+    </section>
+    <section id="battle-one" class="Lbattle">
+        <h2 class="battle-about">Battle of Alesia</h2>
+        <div id="contentwrapper">
+            <div id="right">
+            <div id="imgdiv"><img id="battle-one-img" class="battle-img"src="assets/images/SiegeAlesia.png" alt="fortication built by Ceasar in Alesia">
+            </div>
+            </div>
+            </div>   
+    <div>
+        <label for="battle-one-img">fortication built by Julius Ceasar in Alesia</label>
+        
+    </div>
+    <div>
+        <p class="battle-about">
+            The Battle of Alesia took place in 52 BCE when Roman troops, led by Roman governor Julius Caesar, 
+            fought the Gauls at the city of Alesia. The Gauls had rebelled against Caesar's rule and fortified themselves within the city, 
+            located in eastern Gaul, now commonly believed to be Burgundy, France. Caesar was victorious in this battle, 
+            despite the various complications that arose.
+            The Gauls were a tribal society with many factions and many differences from one another. 
+            However, when Caesar threatened to overthrow them, 
+            they put those differences aside and united under one banner led by a man named Vercingetorix. 
+            Vercingetorix would go on to lead the Gauls in the Battle of Alesia.
+        </p>
+    </div>
+        </section>
+
+        <section id="battle-two" class="Lbattle">
+            <h2 class="battle-about">Battle of Pharsalus</h2>
+            <div id="contentwrapper">
+                <div id="right">
+                <div id="imgdiv"><img id="battle-two-img" class="battle-img" src="assets/images/pompey.jpg" alt="fortication built by Ceasar in Alesia">
+                </div>
+                </div>
+                </div>   
+        <div>
+            <label for="battle-two-img">picture of Ceasar rival Pompey</label>
+            
+        </div>
+        <div>
+            <p class="battle-about">
+                the decisive engagement in the Roman civil war between Julius Caesar and Pompey the Great. 
+                After failing to subdue his enemies at Dyrrhachium, 
+                Caesar clashed with Pompey somewhere near Pharsalus. 
+                Although Caesar was greatly outnumbered, 
+                his veteran legions successfully routed Pompey’s 
+                diverse but undisciplined levies. Pompey’s flight to Egypt and subsequent murder handed the ultimate victory to Caesar.
+            </p>
+        </div>
+            </section>
+
+        <footer>
+            https://study.com/learn/lesson/battle-of-alesia-location-siege.html#:~:text=The%20Battle%20of%20Alesia%20took,believed%20to%20be%20Burgundy%2C%20France.
+        </footer>
 </body>
 </html>
