--- a/personal.html
+++ b/personal.html
@@ -16,7 +16,7 @@
             <ul id="menu">
                 
                 <li>
-                    <a href="personal.html">Personal</a>
+                    <a href="personal.html" class="active">Personal</a>
                 </li>
 
                 <li>
@@ -24,7 +24,7 @@
                 </li>
                 
                 <li>
-                    <a  href="political.html">Political Career</a>
+                    <a  href="political.html" class="active">Political Career</a>
                 </li>
 
 
