--- a/political.html
+++ b/political.html
@@ -23,7 +23,7 @@
             </li>
             
             <li>
-                <a  href="political.html">Political Career</a>
+                <a  href="political.html" class="active">Political Career</a>
             </li>
 
                 
