--- a/battles.html
+++ b/battles.html
@@ -88,7 +88,8 @@
             </section>
 
         <footer>
-            https://study.com/learn/lesson/battle-of-alesia-location-siege.html#:~:text=The%20Battle%20of%20Alesia%20took,believed%20to%20be%20Burgundy%2C%20France.
+            <div>https://study.com/learn/lesson/battle-of-alesia-location-siege.html#:~:text=The%20Battle%20of%20Alesia%20took,believed%20to%20be%20Burgundy%2C%20France.</div>
+            
         </footer>
 </body>
 </html>
