--- a/index.html
+++ b/index.html
@@ -31,8 +31,25 @@
     </header> 
 <section #about-Ceasar>
 <h2>About Julius Ceasar</h2>
-<p>Julius Caesar was a Roman general and politician who named himself dictator of the Roman Empire, 
-    a rule that lasted less than one year before he was famously assassinated by political rivals</p>
+
+<p>
+    Gaius Julius Caesar was born into a patrician family, the gens Julia, which claimed descent from Julus, 
+    son of the legendary Trojan prince Aeneas, supposedly the son of the goddess Venus The Julii were of Alban origin, 
+    mentioned as one of the leading Alban houses, which settled in Rome around the mid-7th century BC, 
+    following the destruction of Alba Longa. They were granted patrician status, 
+    along with other noble Alban families The Julii also existed at an early period at Bovillae, 
+    evidenced by a very ancient inscription on an altar in the theatre of that town, 
+    which speaks of their offering sacrifices according to the lege Albana, or Alban rites. 
+ </p>
+
+ <p>
+    Despite their ancient pedigree, the Julii Caesares were not especially politically influential, 
+    although they had enjoyed some revival of their political fortunes in the early 1st century BC. Caesar's father, 
+    also called Gaius Julius Caesar, governed the province of Asia, and his sister Julia, Caesar's aunt, married Gaius Marius, 
+    one of the most prominent figures in the Republic. His mother, Aurelia, came from an influential family. 
+    Little is recorded of Caesar's childhood.
+
+ </p>
 </section>
 
 
