--- a/political.html
+++ b/political.html
@@ -14,16 +14,15 @@
         </a>
         <nav>
             <ul id="menu">
-            <li>
-                <a href="personal.html">Personal</a>
-            </li>
-
-            <li>
-                <a href="battles.html">legendary battles</a>
+              <li>
+                <a href="battles.html">Legendary Battles</a>
             </li>
             
             <li>
                 <a  href="political.html" class="active">Political Career</a>
+            </li>
+            <li>
+                <a href="index.html" >Home</a>
             </li>
 
                 
