--- a/battles.html
+++ b/battles.html
@@ -16,17 +16,15 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="personal.html">Personal</a>
-                </li>
-
-                <li>
                     <a href="battles.html" class="active">Legendary Battles</a>
                 </li>
                 
                 <li>
                     <a  href="political.html">Political Career</a>
                 </li>
-
+                <li>
+                    <a href="index.html" >Home</a>
+                </li>
                 
 
             </ul>
