hero image and CSS restructuring

--- a/political.html
+++ b/political.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
+    <link rel="stylesheet" href="assets/css/stylesheetpolitcal.css">
     <title>Legendary Battles</title>
 </head>
 <body>
@@ -29,6 +30,14 @@
 
             </ul>
         </header>
+        
+        <section id="hero-outer">
+          <div id="hero-image"></div>
+          <h2 id="cover-text">Political Career<i class="#"></i></h2>
+          </div>
+      </section>
+      <section id="battle-one" class="Lbattle">
+
 <section>
 
 <div class="timeline">
@@ -71,7 +80,22 @@
 
 </section>
 
-        </nav>
-    </header> 
+<footer>
+  <ul class="sources">
+   <li>https://www.britannica.com/biography/Julius-Caesar-Roman-ruler</li>
+   <li>https://en.wikipedia.org/wiki/Julius_Caesar </li>
+   <li>https://education.nationalgeographic.org/resource/julius-caesar</li>
+   <li>https://study.com/learn/lesson/battle-of-alesia-location-siege.html#:~:text=The%20Battle%20of%20Alesia%20took,believed%20to%20be%20Burgundy%2C%20France.</li>
+  </ul>
+   <ul class="social-networks">
+       <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a></li>
+       <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a></li>
+       <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a></li>
+       <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a></li>
+   </ul>
+</footer>
+<!-- Font awesome script -->
+<script src="https://kit.fontawesome.com/b83175b9a4.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
