--- a/battles.html
+++ b/battles.html
@@ -93,10 +93,22 @@
         </div>
             </section>
            </details>
+           <footer>
+            <ul class="sources">
+             <li>https://www.britannica.com/biography/Julius-Caesar-Roman-ruler</li>
+             <li>https://en.wikipedia.org/wiki/Julius_Caesar </li>
+             <li>https://education.nationalgeographic.org/resource/julius-caesar</li>
+             <li>https://study.com/learn/lesson/battle-of-alesia-location-siege.html#:~:text=The%20Battle%20of%20Alesia%20took,believed%20to%20be%20Burgundy%2C%20France.</li>
+            </ul>
+             <ul class="social-networks">
+                 <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a></li>
+                 <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a></li>
+                 <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a></li>
+                 <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a></li>
+             </ul>
+         </footer>
+         <!-- Font awesome script -->
+<script src="https://kit.fontawesome.com/b83175b9a4.js" crossorigin="anonymous"></script>
 
-        <footer>
-            <div>https://study.com/learn/lesson/battle-of-alesia-location-siege.html#:~:text=The%20Battle%20of%20Alesia%20took,believed%20to%20be%20Burgundy%2C%20France.</div>
-            
-        </footer>
 </body>
 </html>
