battle of dyrrachium

--- a/battles.html
+++ b/battles.html
@@ -36,8 +36,32 @@
         <div id="hero-image"></div>
         <h2 id="cover-text">Legendary battles<i class="#"></i></h2>
         </div>
+
+        <section>
+            <h3>Ceasar strenghts</h3>
+            <p>The available sources suggest that Caesar exercised a ‘hands-on’, 
+                personal style of leadership. There is little evidence of the systematic use of written orders or of what we 
+                might recognise as specialised staff work.
+            </p>
+            <p>
+                In the search for useful intelligence, Caesar interrogated prisoners and deserters in person, and summoned councils of war when he saw fit. 
+                In combat, he moved around the field to assess the changing situation and to encourage his troops,
+                 his trademark scarlet cloak making him easily recognisable.
+            </p>
+        <p>
+            Caesar knew how to win and retain the allegiance of his men. He led them on rigorous marches and exercises as part of their training. 
+            This was the more remarkable because his health was uncertain and he is believed to have suffered from epilepsy. 
+            He insisted on strict discipline, 
+            but was also careful to show his gratitude, and to lavish praise on deserving soldiers.
+        </p>
+
+        <p>all of these trade made him the legendary general he was and made him win these legendary battles</p>
+
+
+        </section>
     </section>
     <section id="battle-one" class="Lbattle">
+        <h3>Battles</h3>
        <details> 
         <summary>Battle of Alesia</summary>
         
@@ -91,7 +115,34 @@
                 diverse but undisciplined levies. Pompey’s flight to Egypt and subsequent murder handed the ultimate victory to Caesar.
             </p>
         </div>
-            </section>
+           </section>
+           </details>
+           <details> 
+            <summary>Battle of Pharsalus</summary>
+        <section id="battle-two" class="Lbattle">
+            <h2 class="battle-about">Battle of Pharsalus</h2>
+            <div id="contentwrapper">
+                <div id="right">
+                <div id="imgdiv"><img id="battle-two-img" class="battle-img" src="assets/images/pompey.jpg" alt="fortication built by Ceasar in Alesia">
+                </div>
+                </div>
+                </div>   
+        <div>
+            <label for="battle-three-img">picture of battle map of Dyrrhachium</label>
+            
+        </div>
+        <div>
+            <p class="battle-about">
+                The Battle of Dyrrachium took place from April to late July 48 BC near the city of Dyrrachium, modern day Durrës in what is now Albania.
+                It was fought between Gaius Julius Caesar and an army led by Gnaeus Pompey during Caesar's civil war.
+                Caesar attempted to capture the vital Pompeian logistics hub of Dyrrachium but was unsuccessful after Pompey occupied it and the surrounding heights. 
+                In response, Caesar besieged Pompey's camp and constructed a circumvallation thereof, until, 
+                after months of skirmishes, Pompey was able to break through Caesar's fortified lines, forcing Caesar to make a strategic retreat into Thessaly.
+                After the battle, Pompey pursued Caesar into Thessaly and then towards Pharsalus, where the decisive battle of Caesar's Greek campaign would be fought.
+
+            </p>
+        </div>
+           </section>
            </details>
            <footer>
             <ul class="sources">
