--- a/battles.html
+++ b/battles.html
@@ -37,37 +37,40 @@
         <h2 id="cover-text">Legendary battles<i class="#"></i></h2>
         </div>
 
-        <section>
-            <h3>Ceasar strenghts</h3>
+        <section id="battle-summary">
+            <h2>Ceasar strenghts</h2>
+            <h3>Leadership</h3>
             <p>The available sources suggest that Caesar exercised a ‘hands-on’, 
                 personal style of leadership. There is little evidence of the systematic use of written orders or of what we 
                 might recognise as specialised staff work.
             </p>
+            <h3>Intelligence</h3>
             <p>
                 In the search for useful intelligence, Caesar interrogated prisoners and deserters in person, and summoned councils of war when he saw fit. 
                 In combat, he moved around the field to assess the changing situation and to encourage his troops,
                  his trademark scarlet cloak making him easily recognisable.
             </p>
+            <h3>Loyalty</h3>
         <p>
-            Caesar knew how to win and retain the allegiance of his men. He led them on rigorous marches and exercises as part of their training. 
-            This was the more remarkable because his health was uncertain and he is believed to have suffered from epilepsy. 
-            He insisted on strict discipline, 
-            but was also careful to show his gratitude, and to lavish praise on deserving soldiers.
+            Caesar knew how to win and retain the allegiance of his men. He led them on rigorous marches and exercises as part of their training. This was the more remarkable because his health was uncertain and he is believed to have suffered from epilepsy. He insisted on strict discipline, but was also careful to show his gratitude, and to lavish praise on deserving soldiers.
         </p>
 
-        <p>all of these trade made him the legendary general he was and made him win these legendary battles</p>
+        <p>all of these traits made him the legendary general he was and made him win these legendary battles</p>
 
 
         </section>
+
     </section>
+
+    <section id="battle-section">
     <section id="battle-one" class="Lbattle">
-        <h3>Battles</h3>
+        <h2>Battles</h2>
        <details> 
         <summary>Battle of Alesia</summary>
         
         <div id="contentwrapper">
             <div id="right">
-            <div id="imgdiv"><img id="battle-one-img" class="battle-img"src="assets/images/SiegeAlesia.png" alt="fortication built by Ceasar in Alesia">
+            <div id="imgdiv"><img id="battle-one-img" class="battle-img"src="assets/images/SiegeAlesia.png" alt="fortication built by Ceasar in Alesia" no-repeat>
             </div>
             </div>
             </div>   
@@ -97,7 +100,7 @@
             <h2 class="battle-about">Battle of Pharsalus</h2>
             <div id="contentwrapper">
                 <div id="right">
-                <div id="imgdiv"><img id="battle-two-img" class="battle-img" src="assets/images/pompey.jpg" alt="fortication built by Ceasar in Alesia">
+                <div id="imgdiv"><img id="battle-two-img" class="battle-img" src="assets/images/pompey.jpg" alt="picture of Ceasar rival Pompey" no-repeat>
                 </div>
                 </div>
                 </div>   
@@ -118,12 +121,12 @@
            </section>
            </details>
            <details> 
-            <summary>Battle of Pharsalus</summary>
-        <section id="battle-two" class="Lbattle">
+            <summary>Battle of Dyrrachium</summary>
+        <section id="battle-three" class="Lbattle">
             <h2 class="battle-about">Battle of Pharsalus</h2>
             <div id="contentwrapper">
                 <div id="right">
-                <div id="imgdiv"><img id="battle-two-img" class="battle-img" src="assets/images/pompey.jpg" alt="fortication built by Ceasar in Alesia">
+                <div id="imgdiv"><img id="battle-three-img" class="battle-img" src="assets/images/Dyrrhachium.png" alt="fortication built by Ceasar in Dyrrachium">
                 </div>
                 </div>
                 </div>   
@@ -143,7 +146,9 @@
             </p>
         </div>
            </section>
+        
            </details>
+        </section>
            <footer>
             <ul class="sources">
              <li>https://www.britannica.com/biography/Julius-Caesar-Roman-ruler</li>
