--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
         </nav>
     </header> 
 
-</section>
-
 
     <section id="other-pages"> 
         <div id="left-about">
@@ -52,9 +50,9 @@
 
         </div>
     </section>
-    <section #about-Ceasar>
+    <section id="about-ceasar">
 
-        <h3>About Julius Ceasar</h3 >
+        <h2>About Julius Ceasar</h2>
 
 <p>
     Gaius Julius Caesar was born into a patrician family, the gens Julia, which claimed descent from Julus, 
