clean up and image fix

--- a/index.html
+++ b/index.html
@@ -72,14 +72,45 @@
     Little is recorded of Caesar's childhood.
 
  </p>
+ 
+ <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg"></div>
+            </div>
+        </div>
+
+        <p>Caesar was born on July 12 or 13 in 100 B.C.E. to a noble family. During his youth, the Roman Republic was in chaos. Seizing the opportunity, Caesar advanced in the political system and briefly became governor of Spain, a Roman province.</p>
+        <p>
+            Returning to Rome, he formed political alliances that helped him become governor of Gaul, an area that included what is now France and Belgium. His Roman troops conquered Gallic tribes by exploiting tribal rivalries. Throughout his eight-year governorship, he increased his military power and, more importantly, acquired plunder from Gaul. When his rivals in Rome demanded he return as a private citizen, he used these riches to support his army and marched them across the Rubicon River, crossing from Gaul into Italy. This sparked a civil war between Caesar’s forces and forces of his chief rival for power, Pompey, from which Caesar emerged victorious.
+        </p>
+
+        <p>
+            In 44 B.C.E., Caesar declared himself dictator for life. His increasing power and great ambition agitated many senators who feared Caesar aspired to be king. Only a month after Caesar’s declaration, a group of senators, among them Marcus Junius Brutus, Caesar’s second choice as heir, and Gaius Cassius Longinus assassinated Caesar in fear of his absolute power.
+        </p>
 </section>
 <footer>
-   <ul class="sources">
-    <li>https://www.britannica.com/biography/Julius-Caesar-Roman-ruler</li>
-    <li>https://en.wikipedia.org/wiki/Julius_Caesar </li>
-    <li>https://education.nationalgeographic.org/resource/julius-caesar</li>
-    <li>https://study.com/learn/lesson/battle-of-alesia-location-siege.html#:~:text=The%20Battle%20of%20Alesia%20took,believed%20to%20be%20Burgundy%2C%20France.</li>
-   </ul>
+    <div class="sources">
+        <h2>Bibliography</h2>
+        <ul>
+            <li>Toynbee, A. J. (2000, January 12). Julius Caesar | Biography, Conquests, Facts, & Death.
+                Encyclopedia Britannica. https://www.britannica.com/biography/Julius-Caesar-Roman-ruler</li>
+            <li>Wikipedia contributors. (2022, November 22). Julius Caesar. Wikipedia.
+                https://en.wikipedia.org/wiki/Julius_Caesar</li>
+            <li>Julius Caesar | National Geographic Society. (n.d.).
+                https://education.nationalgeographic.org/resource/julius-caesar/</li>
+            <li>Study.com | Take Online Courses. Earn College Credit. Research Schools, Degrees & Careers. (n.d.).
+                https://study.com/learn/lesson/battle-of-alesia-location-siege.html
+
+            </li>
+            <li>Wikipedia contributors. (2022a, July 29). Battle of Dyrrhachium (48 BC). Wikipedia.
+                https://en.wikipedia.org/wiki/Battle_of_Dyrrhachium_(48_BC)</li>
+            <li>Wikipedia contributors. (2022a, November 2). Battle of Pharsalus. Wikipedia.
+                https://en.wikipedia.org/wiki/Battle_of_Pharsalus</li>
+
+                <li>Caesar and Politics - Julius Caesar | UNRV. (n.d.). https://www.unrv.com/julius-caesar/caesar-politics.php</li>
+        </ul>
+    </div>
+
     <ul class="social-networks">
         <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a></li>
         <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a></li>
