media and screen preparation

--- a/political.html
+++ b/political.html
@@ -41,7 +41,7 @@
 
     <section>
 
-      <div class="timeline">
+      <div class="timeline" id="end-container">
         <div class="container right">
           <div class="content">
             <h2>74 BC</h2>
@@ -102,7 +102,7 @@
               powers in order to deal with state crises.</p>
           </div>
         </div>
-        <div class="container right">
+        <div class="container right" >
           <div class="content">
             <h2>44 BC - 15 march</h2>
             <p>The conspiracy to assassinate Julius Caesar began with a meeting between Cassius Longinus and his brother-in-law
