responsive design + styling

--- a/political.html
+++ b/political.html
@@ -35,7 +35,7 @@
 
   <section id="hero-outer">
     <div id="hero-image"></div>
-    <h2 id="cover-text">Political Career<i class="#"></i></h2>
+    <h2 id="cover-text"><span>Political Career</span><i class="#"></i></h2>
     </div>
   </section>
 
