--- a/battles.html
+++ b/battles.html
@@ -37,7 +37,7 @@
     <section id="hero-outer">
         <div id="hero-image"></div>
         <h2 id="cover-text">Legendary battles<i class="#"></i></h2>
-        </div>
+
 
         <section id="battle-summary">
             <h2>Ceasar strenghts</h2>
@@ -70,13 +70,14 @@
     </section>
 
     <section id="battle-section">
-        <section id="battle-one" class="Lbattle">
+        <div id="battle-one" class="Lbattle">
             <h2>Battles</h2>
             <details>
+
                 <summary>Battle of Alesia</summary>
                 <div class="container">
                     <div class="image">
-                        <img src="assets/images/SiegeAlesia.png" alt="fortication built by Ceasar in Alesia" no-repeat>
+                        <img src="assets/images/SiegeAlesia.png" alt="fortication built by Ceasar in Alesia">
                     </div>
                     <div class="battle-about">
                         <p>
@@ -92,18 +93,14 @@
                 </div>
 
 
-
-
-
-
             </details>
-        </section>
+        </div>
         <details>
             <summary>Battle of Pharsalus</summary>
-            <section id="battle-two" class="Lbattle">
+            <div id="battle-two" class="Lbattle">
                 <div class="container">
                     <div class="image">
-                        <img src="assets/images/pompey.jpg" alt="fortication built by Ceasar in Alesia" no-repeat>
+                        <img src="assets/images/pompey.jpg" alt="image of Ceasar rival popmpey">
                     </div>
                     <div class="battle-about">
                         <p>
@@ -133,12 +130,15 @@
 
                     </div>
                 </div>
+            </div>
         </details>
+
         <details>
+
             <summary>Battle of Dyrrachium</summary>
             <div class="container">
                 <div class="image">
-                    <img src="assets/images/Dyrrhachium.png" alt="fortication built by Ceasar in Dyrrachium" no-repeat>
+                    <img src="assets/images/Dyrrhachium.png" alt="fortication built by Ceasar in Dyrrachium">
                 </div>
                 <div class="battle-about">
                     <p>
@@ -157,44 +157,51 @@
                     </p>
                 </div>
             </div>
+
+
+        </details>
     </section>
 
-    </details>
-    </section>
-    <footer>
-        <div class="sources">
-            <h2>Bibliography</h2>
-            <ul>
-                <li>Toynbee, A. J. (2000, January 12). Julius Caesar | Biography, Conquests, Facts, & Death.
-                    Encyclopedia Britannica. https://www.britannica.com/biography/Julius-Caesar-Roman-ruler</li>
-                <li>Wikipedia contributors. (2022, November 22). Julius Caesar. Wikipedia.
-                    https://en.wikipedia.org/wiki/Julius_Caesar</li>
-                <li>Julius Caesar | National Geographic Society. (n.d.).
-                    https://education.nationalgeographic.org/resource/julius-caesar/</li>
-                <li>Study.com | Take Online Courses. Earn College Credit. Research Schools, Degrees & Careers. (n.d.).
-                    https://study.com/learn/lesson/battle-of-alesia-location-siege.html
+        <footer>
+            <div class="sources">
+                <h2>Bibliography</h2>
+                <ul>
+                    <li>Toynbee, A. J. (2000, January 12). Julius Caesar | Biography, Conquests, Facts, & Death.
+                        Encyclopedia Britannica. https://www.britannica.com/biography/Julius-Caesar-Roman-ruler</li>
+                    <li>Wikipedia contributors. (2022, November 22). Julius Caesar. Wikipedia.
+                        https://en.wikipedia.org/wiki/Julius_Caesar</li>
+                    <li>Julius Caesar | National Geographic Society. (n.d.).
+                        https://education.nationalgeographic.org/resource/julius-caesar/</li>
+                    <li>Study.com | Take Online Courses. Earn College Credit. Research Schools, Degrees & Careers.
+                        (n.d.).
+                        https://study.com/learn/lesson/battle-of-alesia-location-siege.html
 
-                </li>
-                <li>Wikipedia contributors. (2022a, July 29). Battle of Dyrrhachium (48 BC). Wikipedia.
-                    https://en.wikipedia.org/wiki/Battle_of_Dyrrhachium_(48_BC)</li>
-                <li>Wikipedia contributors. (2022a, November 2). Battle of Pharsalus. Wikipedia.
-                    https://en.wikipedia.org/wiki/Battle_of_Pharsalus</li>
-                    <li>Caesar and Politics - Julius Caesar | UNRV. (n.d.). https://www.unrv.com/julius-caesar/caesar-politics.php</li>
+                    </li>
+                    <li>Wikipedia contributors. (2022a, July 29). Battle of Dyrrhachium (48 BC). Wikipedia.
+                        https://en.wikipedia.org/wiki/Battle_of_Dyrrhachium_(48_BC)</li>
+                    <li>Wikipedia contributors. (2022a, November 2). Battle of Pharsalus. Wikipedia.
+                        https://en.wikipedia.org/wiki/Battle_of_Pharsalus</li>
+
+                    <li>Caesar and Politics - Julius Caesar | UNRV. (n.d.).
+                        https://www.unrv.com/julius-caesar/caesar-politics.php</li>
+                </ul>
+            </div>
+
+            <ul class="social-networks">
+                <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i
+                            class="fab fa-facebook"></i></a></li>
+                <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i
+                            class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i
+                            class="fab fa-youtube-square"></i></a></li>
+                <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i
+                            class="fab fa-instagram"></i></a></li>
             </ul>
-        </div>
-        <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i
-                        class="fab fa-twitter-square"></i></a></li>
-            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i
-                        class="fab fa-youtube-square"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
-            </li>
-        </ul>
-    </footer>
-    <!-- Font awesome script -->
-    <script src="https://kit.fontawesome.com/b83175b9a4.js" crossorigin="anonymous"></script>
+        </footer>
+
+        <!-- Font awesome script -->
+        <script src="https://kit.fontawesome.com/b83175b9a4.js" crossorigin="anonymous"></script>
+        
 
 </body>
 
