--- a/political.html
+++ b/political.html
@@ -27,16 +27,16 @@
         <li>
           <a href="index.html">Home</a>
         </li>
+      
 
 
-
-      </ul>
+      </ul></nav>
   </header>
 
   <section id="hero-outer">
     <div id="hero-image"></div>
     <h2 id="cover-text"><span>Political Career</span><i class="#"></i></h2>
-    </div>
+    
   </section>
 
     <section>
@@ -112,6 +112,7 @@
               He was assassinated by a group of nobles in the Senate House on the Ides of March.</p>
           </div>
         </div>
+      </div>
 
     </section>
 
