--- a/404.html
+++ b/404.html
@@ -28,10 +28,11 @@
             </ul>
         </nav>
     </header> 
-
+<section id="error">
     <p>can't find this page</p>
-    <a href="index.html" class="active">Return to Home page</a>
 
+    <a href="index.html" class="active">Return to Home page</a>
+</section>
     <ul class="social-networks">
         <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook" aria-label="link to facebook"></i></a></li>
         <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square" aria-label="link to twitter"></i></a></li>
