--- a/battles.html
+++ b/battles.html
@@ -99,9 +99,7 @@
             <summary>Battle of Pharsalus</summary>
             <div id="battle-two" class="Lbattle">
                 <div class="container">
-                    <div class="image">
-                        <img src="assets/images/pompey.jpg" alt="image of Ceasar rival popmpey">
-                    </div>
+                    
                     <div class="battle-about">
                         <p>
                             Following the start of the Civil War, Caesar had captured Rome, forced Pompey and his allies
@@ -128,6 +126,8 @@
 
                         </p>
 
+                    </div><div class="image" id="pompey">
+                        <img src="assets/images/pompey.jpg" alt="image of Ceasar rival popmpey">
                     </div>
                 </div>
             </div>
@@ -156,6 +156,7 @@
 
                     </p>
                 </div>
+                
             </div>
 
 
