error page + favicon

--- a/404.html
+++ b/404.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="assets/css/stylesheet.css">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <title>404error</title>
 </head>
@@ -28,11 +33,15 @@
             </ul>
         </nav>
     </header> 
-<section id="error">
-    <p>can't find this page</p>
 
-    <a href="index.html" class="active">Return to Home page</a>
-</section>
+    <section class="errorPage">
+        <div class="errorPage__text">
+            <h3>404</h3>
+            <span class="errorPage__button">Return back Home</span>
+        </div>
+        <div class="errorPage__terrain"></div>
+    </section>
+
     <ul class="social-networks">
         <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook" aria-label="link to facebook"></i></a></li>
         <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square" aria-label="link to twitter"></i></a></li>
